# libdm36x-codecs

./: Makefile.am  Makefile.in  README  aclocal.m4  config.bld  configure  configure.ac  dm36x.cfg  get_libs_from_linker_script.pl  libdm36x-codecs.pc.in
